# agentstack

./: README.md  agentstack_implementation_guide.md  agentstack_implementation_guide_v2.md  setup_issue1.sh
agentstack/.github/workflows/: ci.yml
agentstack/backend/: Dockerfile  integration_skills.py  integration_test.py  main.py  pyproject.toml  pytest.ini  test_workers_config.py  worker.py
agentstack/backend/agent/: executor.py  graph.py  state.py
agentstack/backend/skills/: aave.py  base.py  gmx.py  registry.py  uniswap.py
agentstack/backend/tests/: test_agent.py  test_agent_real_llm.py  test_api.py  test_executor.py  test_skills.py  test_workers.py
agentstack/contracts/: foundry.toml
agentstack/contracts/broadcast/DeployFork.s.sol/421614/: run-1775401713225.json  run-1775403156767.json  run-1775403554266.json  run-latest.json
agentstack/contracts/cache/: solidity-files-cache.json  test-failures
agentstack/contracts/script/: DeployFork.s.sol
agentstack/contracts/src/: AgentWallet.sol  SkillRegistry.sol  SubscriptionManager.sol
agentstack/contracts/test/: AgentWallet.t.sol  BillingTest.t.sol
agentstack/frontend/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts
agentstack/frontend/src/app/: globals.css  layout.tsx  page.tsx
agentstack/frontend/src/app/chat/: page.tsx
agentstack/frontend/src/app/dashboard/: page.tsx
agentstack/frontend/src/components/layout/: Navbar.tsx
agentstack/frontend/src/hooks/: use-mobile.ts
agentstack/infra/: docker-compose.dev.yml
agentstack/signer/: index.js  package-lock.json  package.json
(+4 files in other folders)
