[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-core>=1.2.26",
    "langgraph>=1.1.6",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "redis>=7.4.0",
    "uvicorn>=0.43.0",
    "web3>=7.15.0",
]
